# WoundCarePro

./: .gitignore  PROJECT_PLAN.md  README_OpenCV_Setup.txt  crash.txt  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/pasindu/woundcarepro/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/models/: README.md  wound_segmentation.tflite
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/pasindu/woundcarepro/: MainActivity.kt  WoundCareProApp.kt
app/src/main/java/com/pasindu/woundcarepro/data/local/: DatabaseMigrations.kt  DatabaseProvider.kt  DefaultPatient.kt  DefaultWound.kt  WoundCareDatabase.kt
app/src/main/java/com/pasindu/woundcarepro/data/local/dao/: AiSegmentationResultDao.kt  AssessmentDao.kt  AuditLogDao.kt  ConsentDao.kt  ExportAssessmentMeasurementRow.kt  PatientDao.kt  (+2 more)
app/src/main/java/com/pasindu/woundcarepro/data/repository/: AiSegmentationRepository.kt  AiSegmentationRepositoryImpl.kt
app/src/main/java/com/pasindu/woundcarepro/di/: AiSegmentationModule.kt  AppModule.kt  OpticalModule.kt
app/src/main/java/com/pasindu/woundcarepro/domain/ai/: WoundSegmentationEngine.kt
app/src/main/java/com/pasindu/woundcarepro/domain/optical/: CameraCalibrationRepository.kt  StereoCaptureController.kt  StereoFramePair.kt
app/src/main/java/com/pasindu/woundcarepro/measurement/: HomographySolver.kt  ImageWarp.kt  OutlineJsonConverter.kt  PolygonAreaCalculator.kt  WoundOutline.kt
app/src/main/java/com/pasindu/woundcarepro/native/: NativeBridge.kt
app/src/main/java/com/pasindu/woundcarepro/nativebridge/: NativeBridge.kt
app/src/main/java/com/pasindu/woundcarepro/security/: AppLockManager.kt
app/src/main/java/com/pasindu/woundcarepro/ui/camera/: CameraCaptureScreen.kt  CameraViewModel.kt  ConsentViewModel.kt  QualityGateEvaluator.kt
app/src/main/java/com/pasindu/woundcarepro/ui/export/: ExportScreen.kt
app/src/main/java/com/pasindu/woundcarepro/ui/history/: HistoryScreen.kt  HistoryViewModel.kt
app/src/main/java/com/pasindu/woundcarepro/ui/review/: CalibrationScreen.kt  CalibrationViewModel.kt  ImageCoordinateMapper.kt  MarkerCalibrationScreen.kt  MarkerCalibrationViewModel.kt  MeasurementResultScreen.kt  MeasurementViewModel.kt  ReviewScreen.kt  ReviewViewModel.kt
app/src/main/java/com/pasindu/woundcarepro/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/pasindu/woundcarepro/: ExampleUnitTest.kt
docs/: blueprint_summary.md  opencv_android_sdk_setup.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+15 files in other folders)
